--- a/main.html
+++ b/main.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
  <html>
   <head>
@@ -7,13 +8,13 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <main id="app" class="day">
+    <main id="app"  class="night">
       <!-- html markup here -->
-      <p id="ptag">
+       <p id="ptag">
         “I am an AccioJob student, ready to become an awesome full stack developer.”
       </p>
-      <button id="button#swap" class="button_day">Swap</button>
+      <button id="button#swap" class="button_day" class="button_night">Swap</button>
     </main>
     <script src="./script.js"></script>
   </body>
-</html>
+</html> 
