--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
        <p id="ptag">
         “I am an AccioJob student, ready to become an awesome full stack developer.”
       </p>
-      <button id="button#swap"  class="button_night">Swap</button>
+      <button onclick="btn" id="button#swap"  class="button_night">Swap</button>
     </main>
     <script src="./script.js"></script>
   </body>
