--- a/main.html
+++ b/main.html
@@ -13,8 +13,16 @@
        <p id="ptag">
         “I am an AccioJob student, ready to become an awesome full stack developer.”
       </p>
-      <button onclick="btn" id="button#swap"  class="button_night">Swap</button>
+      <button onclick="myfunction()" id="button#swap"  class="button_night">Swap</button>
     </main>
-    <script src="./script.js"></script>
+
+    <script>
+      function myfunction(){
+        var element = document.body;
+        element.classList.toggle('button_night');
+      
+      }
+    </script>
   </body>
 </html> 
+
