--- a/main.html
+++ b/main.html
@@ -13,13 +13,13 @@
        <p id="ptag">
         “I am an AccioJob student, ready to become an awesome full stack developer.”
       </p>
-      <button onclick="myfunction()" id="button#swap"  class="button_night">Swap</button>
+      <button onclick="myfunction()" id="swap"  class="button-day">Swap</button>
     </main>
 
     <script>
       function myfunction(){
         var element = document.body;
-        element.classList.toggle('button_night');
+        element.classList.toggle('button_day');
       
       }
     </script>
